crates/sid-widgets/tests/snapshots/system_render__system_default_empty_pinned.snap
---
source: crates/sid-widgets/tests/system_render.rs
expression: s
---
● Pinned configs · ○ Services · ○ Quick actions   (Tab cycles)                  
┌ Pinned configs ──────────────────────────────────────────────────────────────┐
│  (no pinned configs)                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Tab: switch pane · /: filter · Enter: action
