crates/sid-widgets/tests/snapshots/system_render__system_filter_active.snap
---
source: crates/sid-widgets/tests/system_render.rs
expression: s
---
● Pinned configs · ○ Services · ○ Quick actions   (Tab cycles)                  
┌ Pinned configs ──────────────────────────────────────────────────────────────┐
│> /etc/nginx.conf  [nginx]                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
/ ngi
