crates/sid-widgets/tests/snapshots/system_render__system_pinned_three_selected.snap
---
source: crates/sid-widgets/tests/system_render.rs
expression: s
---
● Pinned configs · ○ Services · ○ Quick actions   (Tab cycles)                  
┌ Pinned configs ──────────────────────────────────────────────────────────────┐
│  /home/u/.zshrc  [zsh]                                                       │
│> /home/u/.config/nvim/init.lua  [nvim]                                       │
│  /etc/hosts  [hosts]                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Tab: switch pane · /: filter · Enter: action
